--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-pro-sidebar": "^1.0.0",
