--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.3",
     "dinero.js": "^2.0.0-alpha.12",
     "dotenv": "^16.0.1",
+    "keen-slider": "^6.8.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-color": "^2.19.3",
